--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
   <div class="container">
     <form>
       <label for="entitas">Nama Entitas</label>
-      <input type="text" id="entitas" placeholder="Enter Input">
+      <input type="text" id="entitas" placeholder="Tulis nama entitas di sini">
 
       <label for="username">Nama Pengguna</label>
-      <input type="text" id="username" placeholder="Enter Input">
+      <input type="text" id="username" placeholder="Tulis nama pengguna di sini">
 
-      <label for="password">Nama Sandi</label>
-      <input type="password" id="password" placeholder="Enter Input">
+      <label for="password">Kata Sandi</label>
+      <input type="password" id="password" placeholder="Tulis kata sandi di sini">
 
       <button type="submit">Masuk</button>
     </form>
