--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Aplikasi Pencatatan</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #f9f9f9;
-      animation: fadeIn 0.8s ease-in;
+      animation: fadeIn 1s ease-in;
     }
     @keyframes fadeIn {
       from { opacity: 0; }
@@ -19,23 +22,23 @@
       background-color: #2f7a3e;
       color: white;
       text-align: center;
-      padding: 40px 20px;
+      padding: 40px 20px 50px;
       border-bottom-left-radius: 40px;
       border-bottom-right-radius: 40px;
-      animation: slideDown 1s ease-out;
+      animation: slideDown 0.8s ease-in-out;
     }
     @keyframes slideDown {
-      from { transform: translateY(-40px); opacity: 0; }
+      from { transform: translateY(-20px); opacity: 0; }
       to { transform: translateY(0); opacity: 1; }
     }
     .header img {
       width: 100px;
       height: auto;
       margin: 20px 0;
-      animation: fadeIn 1.5s ease-in;
     }
     .version {
       font-size: 0.9em;
+      margin-bottom: 20px;
     }
     .container {
       max-width: 360px;
@@ -45,11 +48,7 @@
       padding: 32px 20px;
       border-radius: 20px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      animation: fadeInUp 1s ease-out;
-    }
-    @keyframes fadeInUp {
-      from { transform: translateY(20px); opacity: 0; }
-      to { transform: translateY(0); opacity: 1; }
+      animation: fadeIn 1.5s ease-in;
     }
     label {
       display: block;
@@ -64,11 +63,11 @@
       border: 1px solid #ccc;
       border-radius: 10px;
       font-size: 15px;
-      box-sizing: border-box;
-      transition: border 0.3s;
+      transition: border-color 0.3s, box-shadow 0.3s;
     }
     input[type="text"]:focus, input[type="password"]:focus {
-      border-color: #3e833f;
+      border-color: #2f7a3e;
+      box-shadow: 0 0 6px rgba(47, 122, 62, 0.5);
       outline: none;
     }
     button {
@@ -83,21 +82,28 @@
       transition: background-color 0.3s, transform 0.2s;
     }
     button:hover {
-      background-color: #356c35;
-      transform: scale(1.02);
+      background-color: #2f7a3e;
+      transform: translateY(-2px);
     }
     .register {
       text-align: center;
       margin-top: 20px;
       font-size: 14px;
-      animation: fadeIn 1.2s ease-in;
+      animation: fadeIn 2s ease-in;
     }
     .register a {
       color: #2f7a3e;
       text-decoration: none;
       font-weight: bold;
+      transition: color 0.3s;
+    }
+    .register a:hover {
+      color: #1e562a;
     }
   </style>
+
+  <link rel="manifest" href="manifest.json">
+  
 </head>
 <body>
 
