--- a/index.html
+++ b/index.html
@@ -105,6 +105,17 @@
   <link rel="manifest" href="manifest.json">
   
 </head>
+
+<script>
+  if ('serviceWorker' in navigator) {
+    window.addEventListener('load', () => {
+      navigator.serviceWorker.register('service-worker.js')
+        .then(reg => console.log('Service Worker registered', reg))
+        .catch(err => console.error('Service Worker registration failed', err));
+    });
+  }
+</script>
+
 <body>
 
   <div class="header">
