--- a/index.html
+++ b/index.html
@@ -125,7 +125,8 @@
   </div>
 
   <div class="container">
-    <form>
+    <form onsubmit="event.preventDefault(); window.location.href='beranda.html';">
+ 
       <label for="entitas">Nama Entitas</label>
       <input type="text" id="entitas" placeholder="Tulis nama entitas di sini">
 
