--- a/beranda.html
+++ b/beranda.html
@@ -5,38 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Beranda</title>
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      height: 100%;
       font-family: Arial, sans-serif;
+    }
+
+    body {
       background: url('https://res.cloudinary.com/djznrjvy6/image/upload/v1744353196/logo_rezycology_yfmydk.png') no-repeat center center fixed;
       background-size: cover;
     }
 
     .overlay {
       background-color: rgba(47, 122, 62, 0.85);
-      min-height: 100vh;
-      padding: 0 16px 24px;
-      color: white;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
+      justify-content: center;
+      padding: 0 16px 24px;
+      color: white;
     }
 
     .content {
       width: 100%;
       max-width: 400px;
-      flex-grow: 1;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
     }
 
     .top-section {
-      flex-grow: 1;
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: left;
+      flex-grow: 1;
     }
 
     .date {
@@ -62,7 +68,6 @@
       padding: 20px 16px;
       color: #2f7a3e;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      margin-bottom: 16px;
     }
 
     .card button {
