--- a/beranda.html
+++ b/beranda.html
@@ -19,30 +19,31 @@
 
     .overlay {
       background-color: rgba(47, 122, 62, 0.85);
-      height: 100vh;
+      min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 0 16px 24px;
+      padding: 16px;
       color: white;
     }
 
     .content {
       width: 100%;
       max-width: 400px;
-      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      height: 92vh;
     }
 
     .top-section {
+      flex: 0 0 auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: left;
-      flex-grow: 1;
+      padding-top: 20px;
     }
 
     .date {
@@ -51,30 +52,30 @@
     }
 
     .greeting {
-      font-size: 22px;
+      font-size: 20px;
       font-style: italic;
       font-weight: 300;
       margin-bottom: 4px;
     }
 
     .name {
-      font-size: 24px;
+      font-size: 20px;
       font-weight: bold;
     }
 
     .card {
       background-color: white;
       border-radius: 20px;
-      padding: 20px 16px;
+      padding: 16px;
       color: #2f7a3e;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .card button {
       width: 100%;
-      padding: 12px;
-      font-size: 16px;
-      margin-bottom: 14px;
+      padding: 10px;
+      font-size: 15px;
+      margin-bottom: 12px;
       border: 2px solid #2f7a3e;
       border-radius: 10px;
       background: white;
@@ -100,7 +101,7 @@
     }
 
     hr {
-      margin: 12px 0;
+      margin: 10px 0;
       border: none;
       border-top: 1px solid #ccc;
     }
