--- a/beranda.html
+++ b/beranda.html
@@ -19,63 +19,63 @@
 
     .overlay {
       background-color: rgba(47, 122, 62, 0.85);
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 16px;
+      padding: 0 16px 8px;
       color: white;
     }
 
     .content {
       width: 100%;
       max-width: 400px;
+      height: 100%;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 92vh;
     }
 
     .top-section {
-      flex: 0 0 auto;
       display: flex;
       flex-direction: column;
       justify-content: center;
       text-align: left;
-      padding-top: 20px;
+      flex-grow: 1;
+      padding-bottom: 4px;
     }
 
     .date {
       font-size: 14px;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
     }
 
     .greeting {
       font-size: 20px;
       font-style: italic;
       font-weight: 300;
-      margin-bottom: 4px;
+      margin-bottom: 2px;
     }
 
     .name {
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
     }
 
     .card {
       background-color: white;
       border-radius: 20px;
-      padding: 16px;
+      padding: 14px 14px;
       color: #2f7a3e;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .card button {
       width: 100%;
-      padding: 10px;
+      padding: 11px;
       font-size: 15px;
-      margin-bottom: 12px;
+      margin-bottom: 10px;
       border: 2px solid #2f7a3e;
       border-radius: 10px;
       background: white;
@@ -101,7 +101,7 @@
     }
 
     hr {
-      margin: 10px 0;
+      margin: 8px 0;
       border: none;
       border-top: 1px solid #ccc;
     }
