--- a/beranda.html
+++ b/beranda.html
@@ -24,7 +24,7 @@
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      padding: 0 16px 8px;
+      padding: 0 16px 4px;
       color: white;
     }
 
@@ -35,6 +35,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
+      transform: translateY(-10%);
     }
 
     .top-section {
@@ -43,19 +44,19 @@
       justify-content: center;
       text-align: left;
       flex-grow: 1;
-      padding-bottom: 4px;
+      padding-bottom: 2px;
     }
 
     .date {
       font-size: 14px;
-      margin-bottom: 8px;
+      margin-bottom: 6px;
     }
 
     .greeting {
       font-size: 20px;
       font-style: italic;
       font-weight: 300;
-      margin-bottom: 2px;
+      margin-bottom: 1px;
     }
 
     .name {
@@ -66,16 +67,16 @@
     .card {
       background-color: white;
       border-radius: 20px;
-      padding: 14px 14px;
+      padding: 12px 12px;
       color: #2f7a3e;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
     }
 
     .card button {
       width: 100%;
-      padding: 11px;
+      padding: 10px;
       font-size: 15px;
-      margin-bottom: 10px;
+      margin-bottom: 8px;
       border: 2px solid #2f7a3e;
       border-radius: 10px;
       background: white;
@@ -101,7 +102,7 @@
     }
 
     hr {
-      margin: 8px 0;
+      margin: 6px 0;
       border: none;
       border-top: 1px solid #ccc;
     }
