--- a/beranda.html
+++ b/beranda.html
@@ -135,7 +135,7 @@
         <button>Keluar</button>
         <button>Ganti Akun</button>
         <hr>
-        <button class="primary">Pilih Layanan</button>
+        <button class="primary" onclick="window.location.href='pilih-layanan.html'">Pilih Layanan</button>
       </div>
     </div>
   </div>
