--- a/pilih-layanan.html
+++ b/pilih-layanan.html
@@ -5,14 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pilih Layanan</title>
   <style>
-    @keyframes fadeInUp {
+    @keyframes fadeIn {
       from {
         opacity: 0;
-        transform: translateY(20px);
       }
       to {
         opacity: 1;
-        transform: translateY(0);
       }
     }
 
@@ -20,7 +18,8 @@
       margin: 0;
       font-family: Arial, sans-serif;
       background-color: #f9faf9;
-      animation: fadeInUp 0.5s ease;
+      animation: fadeIn 0.6s ease forwards;
+      animation-fill-mode: both;
     }
 
     .header-top {
@@ -29,7 +28,9 @@
       display: flex;
       align-items: center;
       cursor: pointer;
-      animation: fadeInUp 0.6s ease forwards;
+      animation: fadeIn 0.6s ease forwards;
+      animation-delay: 0.2s;
+      animation-fill-mode: both;
     }
 
     .header-top svg {
@@ -42,7 +43,9 @@
       font-size: 22px;
       font-weight: bold;
       padding: 16px;
-      animation: fadeInUp 0.7s ease forwards;
+      animation: fadeIn 0.6s ease forwards;
+      animation-delay: 0.4s;
+      animation-fill-mode: both;
     }
 
     .menu {
@@ -59,11 +62,16 @@
       background-color: white;
       cursor: pointer;
       transition: transform 0.2s ease;
-      animation: fadeInUp 0.8s ease forwards;
+      animation: fadeIn 0.6s ease forwards;
+      animation-fill-mode: both;
+    }
+
+    .menu-item:nth-child(1) {
+      animation-delay: 0.6s;
     }
 
     .menu-item:nth-child(2) {
-      animation-delay: 0.9s;
+      animation-delay: 0.8s;
     }
 
     .menu-item:nth-child(3) {
