--- a/beranda.html
+++ b/beranda.html
@@ -26,7 +26,7 @@
       justify-content: center;
       padding: 0 16px 4px;
       color: white;
-      animation: fadeIn 1s ease-in-out;
+      animation: fadeIn 1s ease-in-out forwards;
     }
 
     .content {
@@ -37,7 +37,7 @@
       flex-direction: column;
       justify-content: space-between;
       padding-bottom: 48px;
-      animation: slideUp 1.2s ease;
+      animation: slideUp 1.2s ease forwards;
     }
 
     .top-section {
@@ -47,7 +47,7 @@
       text-align: left;
       flex-grow: 1;
       padding: 60px 0 24px;
-      animation: fadeIn 1.5s ease;
+      animation: fadeIn 1.5s ease forwards;
     }
 
     .date {
@@ -73,7 +73,7 @@
       padding: 12px 12px;
       color: #2f7a3e;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      animation: slideUp 1.4s ease;
+      animation: slideUp 1.4s ease forwards;
     }
 
     .card button {
@@ -135,7 +135,7 @@
         <button>Keluar</button>
         <button>Ganti Akun</button>
         <hr>
-        <button class="primary" onclick="window.location.href='pilih-layanan.html'">Pilih Layanan</button>
+        <button class="primary">Pilih Layanan</button>
       </div>
     </div>
   </div>
