--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       margin: 0;
     }
 
-    body {
+    html, body {
+      height: 100%;
       font-family: 'Inter', sans-serif;
       background-color: #f5f8f6;
       color: #333;
       animation: fadeIn 1s ease-in;
+      scroll-behavior: smooth;
     }
 
     @keyframes fadeIn {
@@ -35,6 +37,8 @@
       animation: slideDown 0.8s ease-in-out;
       overflow: hidden;
       z-index: 1;
+      perspective: 1px;
+      transform-style: preserve-3d;
     }
 
     .header::before {
@@ -42,12 +46,12 @@
       position: absolute;
       top: 0;
       left: 0;
-      width: 100%;
-      height: 130%;
+      right: 0;
+      bottom: 0;
       background-image: url('https://res.cloudinary.com/djznrjvy6/image/upload/v1744550306/pexels-sarah-chai-7262471_1_wfmuoh.png');
       background-size: cover;
       background-position: center;
-      background-attachment: fixed;
+      transform: translateZ(-1px) scale(2);
       opacity: 0.2;
       z-index: 0;
     }
