--- a/beranda.html
+++ b/beranda.html
@@ -143,7 +143,7 @@
     <button class="btn btn-outline">Keluar</button>
     <button class="btn btn-outline">Ganti Akun</button>
     <div class="divider"></div>
-    <button class="btn btn-primary">Pilih Layanan</button>
+    <button class="btn btn-primary" onclick="window.location.href='pilih-layanan.html'">Pilih Layanan</button>
   </main>
 
   <script>
