--- a/pilih-layanan.html
+++ b/pilih-layanan.html
@@ -111,7 +111,7 @@
   <div class="section-title">Pilih Layanan</div>
 
   <div class="container">
-    <div class="menu-card">
+    <div class="menu-card" onclick="window.location.href='pilih-gudang.html'">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744358238/icon-operasional_cergmh.png" alt="Operasional">
       </div>
