--- a/pilih-gudang.html
+++ b/pilih-gudang.html
@@ -117,7 +117,7 @@
   <div class="section-title">Pilih Gudang</div>
 
   <div class="container">
-    <div class="menu-card">
+    <div class="menu-card" onclick="window.location.href='pilih-catatan.html'">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744555337/icon-pin-point_txt9ah.png" alt="Depok">
       </div>
