--- a/stok-masuk.html
+++ b/stok-masuk.html
@@ -122,7 +122,7 @@
   <div class="subsection">Depok</div>
 
   <div class="container">
-    <div class="menu-card">
+    <div class="menu-card" onclick="window.location.href='tambah-stok-masuk.html'">
       <div class="menu-icon">
         <img src="https://res.cloudinary.com/djznrjvy6/image/upload/v1744558351/icon-tambah-catatan_lzchwt.png" alt="Tambah Catatan">
       </div>
