--- a/tambah-stok-masuk.html
+++ b/tambah-stok-masuk.html
@@ -66,13 +66,13 @@
       padding: 32px 16px;
       display: flex;
       flex-direction: column;
-      gap: 40px;
+      gap: 32px;
     }
 
     .form-section {
       display: flex;
       flex-direction: column;
-      gap: 40px;
+      gap: 32px;
     }
 
     .form-group {
@@ -119,7 +119,7 @@
 
     .upload-link {
       text-align: center;
-      margin-top: 24px;
+      margin: 4px 0 0;
       font-size: 14px;
     }
 
@@ -127,11 +127,37 @@
       color: #2f7a3e;
       font-weight: 600;
       text-decoration: underline;
+      cursor: pointer;
+    }
+
+    .image-preview {
+      display: none;
+      margin-top: 4px;
+    }
+
+    .image-preview img {
+      max-width: 90%;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      display: block;
+      margin: 0 auto;
+    }
+
+    .delete-image {
+      color: red;
+      font-size: 13px;
+      margin-top: 4px;
+      display: block;
+      text-decoration: underline;
+      font-weight: 600;
+      cursor: pointer;
+      text-align: right;
+      padding-right: 16px;
     }
 
     .bottom-divider {
       border-top: 1px solid #e0e0e0;
-      margin: 20px 0 0;
+      margin: 12px 0 0;
     }
 
     .bottom-sheet {
@@ -209,14 +235,43 @@
 
     <div class="bottom-divider"></div>
 
-    <div class="upload-link">
-      <a href="#">Tekan di sini</a> untuk unggah daftar timbangan
+    <div class="upload-link" id="uploadLink">
+      <a href="#" onclick="document.getElementById('cameraInput').click()">Tekan di sini</a> untuk unggah daftar timbangan
+      <input type="file" id="cameraInput" accept="image/*" capture="environment" style="display: none;" onchange="previewImage(event)">
     </div>
+
+    <div class="image-preview" id="imagePreviewContainer">
+      <img id="previewImage" src="" alt="Preview Foto"/>
+      <div class="delete-image" onclick="removeImage()">Tekan di sini untuk hapus daftar timbangan</div>
+    </div>
+
   </div>
 
   <div class="bottom-sheet">
     <button class="submit-button">Simpan ke DB</button>
   </div>
+
+  <script>
+    function previewImage(event) {
+      const file = event.target.files[0];
+      if (!file) return;
+
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        document.getElementById('previewImage').src = e.target.result;
+        document.getElementById('imagePreviewContainer').style.display = 'block';
+        document.getElementById('uploadLink').style.display = 'none';
+      };
+      reader.readAsDataURL(file);
+    }
+
+    function removeImage() {
+      document.getElementById('previewImage').src = '';
+      document.getElementById('imagePreviewContainer').style.display = 'none';
+      document.getElementById('cameraInput').value = '';
+      document.getElementById('uploadLink').style.display = 'block';
+    }
+  </script>
 
 </body>
 </html>
