--- a/tambah-stok-masuk.html
+++ b/tambah-stok-masuk.html
@@ -206,7 +206,7 @@
       <div class="form-group">
         <label>Tanggal dan Aktifitas</label>
         <div class="status">Belum dipilih</div>
-        <div class="link">Tekan di sini untuk pilih tanggal dan aktifitas</div>
+        <div class="link" onclick="window.location.href='pilih-tanggal-dan-aktivitas.html'">Tekan di sini untuk pilih tanggal dan aktifitas</div>
       </div>
 
       <div class="form-group">
