--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -71,26 +71,31 @@
       gap: 32px;
     }
 
+    .form-group {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
     .form-group label {
       font-weight: 600;
       font-size: 14px;
-      margin-bottom: 6px;
     }
 
     .form-group .status {
       color: #d0d0d0;
       font-size: 18px;
-      margin-bottom: 4px;
+      font-weight: 400;
     }
 
     .form-group .link {
       font-size: 13px;
       color: #2f7a3e;
       text-decoration: underline;
-      font-weight: 600;
       cursor: pointer;
+      font-weight: 600;
     }
-
+    
     .bottom-sheet {
       position: fixed;
       bottom: 0;
