--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -201,7 +201,7 @@
       <div class="form-group">
         <label>aktivitas</label>
         <div class="status">Belum dipilih</div>
-        <div class="link">Tekan di sini untuk pilih aktivitas</div>
+        <div class="link" onclick="window.location.href='pilih-aktivitas.html'">Tekan di sini untuk pilih aktivitas</div>
       </div>
     </div>
   </div>
