--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -201,7 +201,8 @@
       <div class="form-group">
         <label>aktivitas</label>
         <div class="status">Belum dipilih</div>
-        <div class="link" onclick="window.location.href='pilih-aktivitas.html'">Tekan di sini untuk pilih aktivitas</div>
+        <!-- <div class="link" onclick="window.location.href='pilih-aktivitas.html'">Tekan di sini untuk pilih aktivitas</div> -->
+        <div class="link" onclick="goToNextPage('tes')">Tekan di sini untuk pilih aktivitas</div>
       </div>
     </div>
   </div>
@@ -236,6 +237,11 @@
         statusEl.style.fontWeight = '600';
       }
       document.getElementById('tanggalModal').style.display = 'none';
+    }
+
+    function goToNextPage(value) {
+      // Redirect to another page with the value as URL parameter
+      window.location.href = `pilih-aktivitas.html?value=${encodeURIComponent(value)}`;
     }
   </script>
 
