--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -224,7 +224,7 @@
   <script>
     const params = new URLSearchParams(window.location.search);
     const tanggal = params.get('tgl');
-    document.getElementById('tanggalStatus').textContent = tanggal || 'No fruit selected';
+    document.getElementById('tanggalStatus').textContent = tanggal || 'Belum dipilih';
     
     function bukaPopupTanggal() {
       document.getElementById('tanggalModal').style.display = 'flex';
