--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -199,7 +199,7 @@
       </div>
 
       <div class="form-group">
-        <label>aktivitas</label>
+        <label>Aktivitas</label>
         <div class="status">Belum dipilih</div>
         <!-- <div class="link" onclick="window.location.href='pilih-aktivitas.html'">Tekan di sini untuk pilih aktivitas</div> -->
         <div class="link" onclick="sendData()">Tekan di sini untuk pilih aktivitas</div>
