--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -225,7 +225,7 @@
     const params = new URLSearchParams(window.location.search);
     const tanggal = params.get('tgl');
     const statusEl = document.getElementById('tanggalStatus').textContent = tanggal || 'Belum dipilih';
-    if (tanggal != 'Belum dipilih') {
+    if (statusEl.textContent != 'Belum dipilih') {
       statusEl.innerText = formatted;
       statusEl.style.color = '#1f3b2c';
       statusEl.style.fontWeight = '600';
