--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -200,7 +200,7 @@
 
       <div class="form-group">
         <label>Aktivitas</label>
-        <div class="status">Belum dipilih</div>
+        <div class="status" id"aktivitasStatus">Belum dipilih</div>
         <!-- <div class="link" onclick="window.location.href='pilih-aktivitas.html'">Tekan di sini untuk pilih aktivitas</div> -->
         <div class="link" onclick="sendData()">Tekan di sini untuk pilih aktivitas</div>
       </div>
@@ -249,8 +249,9 @@
     }
 
     function sendData() {
-      const value = document.getElementById('tanggalStatus').innerText; // or textContent
-      const url = `pilih-aktivitas.html?tgl=${encodeURIComponent(value)}`;
+      const value_1 = document.getElementById('tanggalStatus').innerText; // or textContent
+      const value_2 = document.getElementById('aktivitasStatus').innerText; // or textContent
+      const url = `pilih-aktivitas.html?tgl=${encodeURIComponent(value_1)}&aktf=${encodeURIComponent(value_2)}`;
       window.location.href = url;
     }
   </script>
