--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -200,7 +200,7 @@
 
       <div class="form-group">
         <label>Aktivitas</label>
-        <div class="status" id"aktivitasStatus">Belum dipilih</div>
+        <div class="status" id="aktivitasStatus">Belum dipilih</div>
         <!-- <div class="link" onclick="window.location.href='pilih-aktivitas.html'">Tekan di sini untuk pilih aktivitas</div> -->
         <div class="link" onclick="sendData()">Tekan di sini untuk pilih aktivitas</div>
       </div>
