--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -245,7 +245,44 @@
     function simpanTanggal() {
       const tanggal = document.getElementById('tanggalPicker').value;
       if (tanggal) {
-        const [yyyy, mmm, dd] = tanggal.split("-");
+        const [yyyy, mm, dd] = tanggal.split("-");
+        switch (mm) {
+          case '01':
+            mmm = 'Jan';
+            break;
+          case '02':
+            mmm = 'Feb';
+            break;
+          case '03':
+            mmm = 'Mar';
+            break;
+          case '04':
+            mmm = 'Apr';
+            break;
+          case '05':
+            mmm = 'Mei';
+            break;
+          case '06':
+            mmm = 'Jun';
+            break;
+          case '07':
+            mmm = 'Jul';
+            break;
+          case '08':
+            mmm = 'Agu';
+            break;
+          case '09':
+            mmm = 'Sep';
+            break;
+          case '10':
+            mmm = 'Okt';
+            break;
+          case '11':
+            mmm = 'Nov';
+            break;
+          case '12':
+            mmm = 'Des';
+        }
         const formatted = `${dd}-${mmm}-${yyyy}`;
         const statusEl = document.getElementById('tanggalStatus');
         statusEl.innerText = formatted;
