--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -120,7 +120,7 @@
       const params = new URLSearchParams(window.location.search);
       const tanggal = params.get('tgl');
       const aktivitas = params.get('aktv');
-      const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(value)}`;
+      const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(aktivitas)}`;
       window.location.href = url;
     }
   </script>
