--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -118,8 +118,8 @@
 
     function sendDataBack() {
       const params = new URLSearchParams(window.location.search);
-      const tanggal = params.get('tgl') || 'Belum Dipilih';
-      const aktivitas = params.get('aktv') || 'Belum Dipilih';
+      const tanggal = params.get('tgl') || 'Belum dipilih';
+      const aktivitas = params.get('aktv') || 'Belum dipilih';
       const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(aktivitas)}`;
       window.location.href = url;
     }
