--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -96,7 +96,7 @@
     Kembali
   </div>
 
-  <div class="section-title">Pilih Aktifitas</div>
+  <div class="section-title">Pilih Aktivitas</div>
   <div class="subsection">Depok</div>
 
   <div class="container">
