--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -208,7 +208,7 @@
   </div>
 
   <div class="bottom-sheet">
-    <button class="reset-button">Reset</button>
+    <button class="reset-button" onclick="reset()">Reset</button>
     <div class="atau">atau</div>
     <button class="submit-button">Simpan</button>
   </div>
@@ -297,6 +297,17 @@
       const value_2 = document.getElementById('aktivitasStatus').innerText; // or textContent
       const url = `pilih-aktivitas.html?tgl=${encodeURIComponent(value_1)}&aktv=${encodeURIComponent(value_2)}`;
       window.location.href = url;
+    }
+
+    function reset() {
+      const statusEl_1 = document.getElementById('tanggalStatus');
+      const statusEl_2 = document.getElementById('aktivitasStatus');
+      statusEl_1.textContent = 'Belum dipilih';
+      statusEl_2.textContent = 'Belum dipilih';
+      statusEl_1.style.color = '#d0d0d0';
+      statusEl_2.style.color = '#d0d0d0';
+      statusEl_1.style.fontWeight = '400';
+      statusEl_2.style.fontWeight = '400';      
     }
   </script>
 
