--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
   </div>
 
 <script>
+  document.documentElement.requestFullscreen();
   if ('serviceWorker' in navigator) {
     window.addEventListener('load', () => {
       navigator.serviceWorker.register('service-worker.js')
