--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -222,6 +222,16 @@
   </div>
 
   <script>
+    // Tambahkan state custom ke history
+    window.history.pushState({ page: "current-page" }, "", window.location.href);
+
+    // Listener tombol back
+    window.addEventListener("popstate", function (event) {
+      if (event.state && event.state.page === "current-page") {
+        window.location.href = "tambah-stok-masuk.html"; // redirect tujuan
+      }
+    });
+    
     const params = new URLSearchParams(window.location.search);
     const tanggal = params.get('tgl');
     const aktivitas = params.get('aktv');
