--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -113,7 +113,8 @@
       const params = new URLSearchParams(window.location.search);
       const tanggal = params.get('tgl');
       const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(value)}`;
-      window.location.href = url;
+      //window.location.href = url;
+      window.location.replace(url);
     }
 
     function sendDataBack() {
@@ -121,18 +122,9 @@
       const tanggal = params.get('tgl') || 'Belum dipilih';
       const aktivitas = params.get('aktv') || 'Belum dipilih';
       const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(aktivitas)}`;
-      window.location.href = url;
+      //window.location.href = url;
+      window.location.replace(url);
     }
-
-    // Tambahkan state custom ke history
-    window.history.pushState({ page: "current-page" }, "", window.location.href);
-
-    // Listener tombol back
-    window.addEventListener("popstate", function (event) {
-      if (event.state && event.state.page === "current-page") {
-        sendDataBack(); // redirect tujuan
-      }
-    });
   </script>
   
 </body>
