--- a/pilih-tanggal-dan-aktivitas.html
+++ b/pilih-tanggal-dan-aktivitas.html
@@ -182,7 +182,7 @@
 </head>
 <body>
 
-  <div class="top-bar" onclick="window.location.href='tambah-stok-masuk.html'">
+  <div class="top-bar" onclick="window.location.replace('tambah-stok-masuk.html')">
     <svg fill="none" viewBox="0 0 24 24"><path stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M15 19l-7-7 7-7"/></svg>
     Kembali
   </div>
@@ -296,7 +296,8 @@
       const value_1 = document.getElementById('tanggalStatus').innerText; // or textContent
       const value_2 = document.getElementById('aktivitasStatus').innerText; // or textContent
       const url = `pilih-aktivitas.html?tgl=${encodeURIComponent(value_1)}&aktv=${encodeURIComponent(value_2)}`;
-      window.location.href = url;
+      //window.location.href = url;
+      window.location.replace(url);
     }
 
     function reset() {
