--- a/pilih-aktivitas.html
+++ b/pilih-aktivitas.html
@@ -113,8 +113,8 @@
       const params = new URLSearchParams(window.location.search);
       const tanggal = params.get('tgl');
       const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(value)}`;
-      //window.location.href = url;
-      window.location.replace(url);
+      window.location.href = url;
+      //window.location.replace(url);
     }
 
     function sendDataBack() {
@@ -122,8 +122,8 @@
       const tanggal = params.get('tgl') || 'Belum dipilih';
       const aktivitas = params.get('aktv') || 'Belum dipilih';
       const url = `pilih-tanggal-dan-aktivitas.html?tgl=${encodeURIComponent(tanggal)}&aktv=${encodeURIComponent(aktivitas)}`;
-      //window.location.href = url;
-      window.location.replace(url);
+      window.location.href = url;
+      //window.location.replace(url);
     }
   </script>
   
